[package]
name = "rust-digital-signature"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
sha2 = "0.9.5"
openssl = "0.10.36"
serde_json = "1.0.66"
serde = { version = "1.0", features = ["derive"] }